--- a/index.html
+++ b/index.html
@@ -18,21 +18,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="header_inner">
-    <img class="icon" src="./assets/icon/logo.png" alt="logo">
-    <nav class="nav">
-        <a href="#" class="menu__item__link .name" > HOME </a>
-        <a href="#" class="menu__item__link" > ABOUT </a>      
-        <a href="#" class="menu__item__link" > CONTACT </a> 
-    </nav>
-</div> 
     <header>
-        <h1 class="header_main_text">UI/UX & Graphic Designer</h1>
-        <h2 class="header_secondary_text">I am a Graphic & Web Designer based in New York, specializing 
-            </h2>
-        <h2 class="header_secondary_text_two">
-                in User Interface Design and Development.</h2>
+        <div class="header_inner">
+            <img class="icon" src="./assets/icon/logo.png" alt="logo">
+            <nav class="nav">
+                <a href="#" class="menu__item__link active" > HOME </a>
+                <a href="#" class="menu__item__link" > ABOUT </a>      
+                <a href="#" class="menu__item__link" > CONTACT </a> 
+            </nav>
+        </div> 
     </header>
+    <main>
+        <h1 class="main-screen_title">UI/UX & Graphic Designer</h1>
+        <p class="main-screen_subtitle">I am a Graphic & Web Designer based in New York, specializing  in User Interface Design and Development.</p>
     <section class="cat_section">
         <img src="./assets/img/cat1.jpg" class="image_item" alt="">
         <img src="./assets/img/cat2.jpg" class="image_item" alt="">
@@ -51,6 +49,8 @@
         <img src="./assets/img/cat3.jpg" class="image_item" alt="">
         <img src="./assets/img/cat4.jpg" class="image_item" alt="">
     </section>
+    
+    </main>
     <footer>
         <div class="footer_part">
             <div class="footer_div"> 
