--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
         </div> 
     </header>
     <main>
-        <h1 class="main-screen_title">UI/UX & Graphic Designer</h1>
-        <p class="main-screen_subtitle">I am a Graphic & Web Designer based in New York, specializing  in User Interface Design and Development.</p>
+        <div class="main-text_container">
+            <h1 class="main-screen_title">UI/UX & Graphic Designer</h1>
+        </div>
+        <div class="subtitle-text_container">
+            <p class="main-screen_subtitle">I am a Graphic & Web Designer based in New York, specializing <br> in User Interface Design and Development.</p>
+        </div>
     <section class="cat_section">
         <img src="./assets/img/cat1.jpg" class="image_item" alt="">
         <img src="./assets/img/cat2.jpg" class="image_item" alt="">
